RESOLVED FIXED259791
[watchOS] Turning on lockdown mode should not cause certain web fonts to be enabled
https://bugs.webkit.org/show_bug.cgi?id=259791
Summary [watchOS] Turning on lockdown mode should not cause certain web fonts to be e...
Wenson Hsieh
Reported 2023-08-03 12:53:58 PDT
Attachments
Wenson Hsieh
Comment 1 2023-08-03 15:12:49 PDT
EWS
Comment 2 2023-08-03 18:20:12 PDT
Committed 266563@main (eb66cb954736): <https://commits.webkit.org/266563@main> Reviewed commits have been landed. Closing PR #16365 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.